--- a/04_Regional_Climate_Trends/Guides/3_Analyzing_Climate_Trends.Rnw
+++ b/04_Regional_Climate_Trends/Guides/3_Analyzing_Climate_Trends.Rnw
@@ -64,7 +64,7 @@ Open the file in Rstudio and run the code, using the ``source''. button near the
 Run the \href{https://github.com/marclos/RTricks/blob/master/04_Regional_Climate_Trends/Guides/Guide3functions.R}{Guide3functions.R} code and the functions will be loaded into your environment automatically and are designed to help you analyze your statio data. 
 
 <<setup, echo=FALSE, results='hide', message=FALSE>>=
-datafolder = "/home/mwl04747/RTricks/04_Regional_Climate_Trends/Data/SP24/"
+datapath = "/home/mwl04747/RTricks/04_Regional_Climate_Trends/Data/SP24/"
 library(xtable)
 library(here)
 source(here("04_Regional_Climate_Trends", "Guides", "Guide3functions.R"))
@@ -86,6 +86,34 @@ Before you begin, make sure you have the stations to read into R. Look at the R 
 print(read_and_load_data.fun)
 @
 
+
+\item{Loading Saved RData files}
+
+If you have saved the RData files, you can load them into the R environment using the following code:
+
+DOESN'T WORK YET!
+
+<<>>=
+LoadData.fun(datapath)
+@ 
+
+Brute for method: 
+<<>>=
+if (file.exists(paste0(datapath, "anamolies.RData" ))) {
+    load(file=paste0(datapath, "anamolies.RData"))
+    return
+    print("RData file found and loaded")
+} else {
+    print("RData file does not exist.")
+}
+@
+
+
+<<>>=
+ls()
+@
+
+                         
 \end{description}
 
 \section{Analyzing Monthly Trends}
@@ -102,7 +130,7 @@ In this section, we'll discuss how we might analyze the trends in the data by mo
 print(monthlyTrend.fun)
 @
 
-\item[Example of how to use the function] Here's an example using the list of station dataframes anomalies.
+\item[Example of how to use the function] Here's an example using the list of station dataframes anomalies. Note: I have spelled this wrong!
 
 <<echo=TRUE, results='hide'>>=
 USC00042294.trends <- monthlyTrend.fun(USC00042294.anomalies)
@@ -133,7 +161,36 @@ Station data frames were called GSOM (Monthly data). See if you can interpret ea
 print(MonthEvalStats.fun)
 @
 
-\subsection{Filtering Seasonal Effect}
+\subsection{Plotting a Simple Trend Line}
+
+Here's an example of how to plot a simple trend line for TMIN for January. We are getting ahead of ourselves here, but it's a good example of how to plot a trend line and some of the back and forth we'll need to do between analysis and presentation. 
+
+I suggest you select the element/month with the strongest signal. I selected TMIN and January because it had a strong signal ), i.e. highly significant with a p-value << 0.05.  
+<<>>=
+par(mar=c(5,5,3,4), las=1)
+      
+plot(TMIN.a ~ Ymd, data=subset(USC00042294.anomalies$TMIN, 
+    MONTH==1), las=1, pch=20, cex=.5, col="grey", 
+    ylab="Temp Anamoly (°C) ", 
+    main="", 
+    #sub="For Station USC00042294, 1893-2012, slope = 0.001,  p-value < 0.001, r2 = 0.02", 
+    xlab="Year", frame.plot=TRUE)
+mtext("Maximum Daily Temperature Trend for June", cex=1.3, side=3, line=1)
+
+subtitle <- "Trend Line: 2.0/100 yrs; p-value = 0.004, r2 = 0.006"
+mtext(subtitle, side=3, line=0, cex=1.0, col="red")
+
+USC00042294.lm = lm(TMIN.a ~ Ymd, 
+          data=subset(USC00042294.anomalies$TMIN, MONTH==1))
+
+abline(coef(USC00042294.lm), col="red", lwd=1.5)
+@
+
+ 
+
+
+  
+  \subsection{Filtering Seasonal Effect}
 
 Since we are looking at trends over years, it might be useful to filter out the seasonal effects.
 
@@ -272,7 +329,7 @@ In this example, we could either use rnorm or a kernel density estimate, for eac
 
 <<eval=TRUE, echo=FALSE>>=
 #library(lubridate)
-load("USC00042294b.RData")
+#load("USC00042294b.RData")
 station = USC00042294b
 
 #floor_decade  = function(value){ return(value - value %% 10) } 
