--- a/04_Regional_Climate_Trends/Guides/2_Cleaning_and_Preprocessing_Station_Data.Rnw
+++ b/04_Regional_Climate_Trends/Guides/2_Cleaning_and_Preprocessing_Station_Data.Rnw
@@ -240,30 +240,35 @@ USC00042294.normals <- MonthlyNormals.fun(USC00042294b)
 Example of how to use the function:
 
 <<echo=TRUE, results='hide'>>=
-USC00042294.anomalies <- MonthlyAnomalies.fun(USC00042294.monthly, USC00042294.normals)
+USC00042294.anamolies <- 
+  MonthlyAnamolies.fun(USC00042294.monthly, USC00042294.normals)
 @
 
 \end{description}
 
 \subsection{Checking on the Results}
 
+<<>>=
+ls()
+@
+
 Getting into the data is a bit tricky. The datasets is a list of dataframes. Each dataframe is a different variable, where 1 is TMAX, 2 is TMIN, and 3 is PRCP.
 
 The get access to each you use the following code:
 
 \begin{itemize}
-  \item \verb|USC00042294.anomalies[[1]]| for TMAX
-  \item \verb|USC00042294.anomalies[[2]]| for TMIN
-  \item \verb|USC00042294.anomalies[[3]]| for PRCP
+  \item \verb|USC00042294.anamolies[[1]]| for TMAX
+  \item \verb|USC00042294.anamolies[[2]]| for TMIN
+  \item \verb|USC00042294.anamolies[[3]]| for PRCP
 \end{itemize}
 
 \begin{figure}
 <<echo=FALSE>>=
 # plot the data
 par(mfrow=c(3,1), mar=c(4,5,3,2))
-plot(TMAX.a ~ Ymd, data=USC00042294.anomalies[[1]], type="p", col="red", pch=19, cex=.2, las=1, xlab="Year", ylab="Temperature Anomaly (C)", main="Monthly Maximum Temperature Change")
-plot(TMIN.a ~ Ymd, data=USC00042294.anomalies[[2]], type="p", col="blue", pch=19, cex=.2, las=1, xlab="Year", ylab="Temperature Anomaly (C)", main="Monthly Minimum Temperature Change")
-plot(PRCP.a ~ Ymd, data=USC00042294.anomalies[[3]], type="p", col="green", pch=19, cex=.2, las=1, xlab="Year", ylab="Precipitation Anomaly (C)", main="Monthly Precipiation Change")
+plot(TMAX.a ~ Ymd, data=USC00042294.anamolies[[1]], type="p", col="red", pch=19, cex=.2, las=1, xlab="Year", ylab="Temperature Anamoly (C)", main="Monthly Maximum Temperature Change")
+plot(TMIN.a ~ Ymd, data=USC00042294.anamolies[[2]], type="p", col="blue", pch=19, cex=.2, las=1, xlab="Year", ylab="Temperature Anamoly (C)", main="Monthly Minimum Temperature Change")
+plot(PRCP.a ~ Ymd, data=USC00042294.anamolies[[3]], type="p", col="green", pch=19, cex=.2, las=1, xlab="Year", ylab="Precipitation Anamoly (C)", main="Monthly Precipiation Change")
 @
 \end{figure}
 
@@ -277,7 +282,7 @@ Also, I like to move the final products into csv files. Here's the function to d
 CleanUp.fun(datafolder, USC00042294.anomalies, "USC00042294")
 @
 
-\Large\textcolor{LightRubineRed}{Your are done with this guide, now take a break, a walk, and enjoy some downtime without looking at a computer. Next, go to Guide 3!}
+\Large\textcolor{Magenta}{Your are done with this guide, now take a break, a walk, and enjoy some screen free downtime. Next, go to Guide 3!}
 
 \clearpage
 
@@ -326,7 +331,7 @@ If you have too many stations that don't have enough data, we'll need to downloa
 
 Similar to the problem above, missing data can be a problem. The real issue that I can see is that rainfall is so central because we use the data to calculate monthly totals, but if the month is missing data, then we have a severe bias. Same issue in temperature, but because we are looking at averages, it's less likely to be a major source of bias. But we should should check!
 
-\subsubsection{Plot Anomaly}
+\subsubsection{Plot Anamoly}
 
 Graphic has lots of issues. more next time!  But here's a start.
 
@@ -363,12 +368,12 @@ print(MonthlyValues.fun)
 @
 
 
-\subsection{MonthlyAnomalies.fun}
+\subsection{MonthlyAnamolies.fun}
 
 Here's the function: 
 
 <<echo=FALSE>>=
-print(MonthlyAnomalies.fun)
+print(MonthlyAamolies.fun)
 @
 
 
@@ -386,9 +391,13 @@ So far, I have only run function for 1 station, but I suspect you can figure out
 
 This is all we need to do so far. Next week, we'll look at different way to visualize the data! 
 
-\subsection{Clean Up R Environment}
+\subsection{Save and Clean Up R Environment}
 
 I'll save all the station data into csv files, then use them in the next guide to clean, process, and visualize data. I don't think the function is all that useful, so I can show you better ways of doing thin is class.
+
+<<>>=
+SaveCleanUp.fun(datafolder)
+@
 
 <<eval=FALSE>>=
 station1.clean=cleandataframe.fun(station1)
