--- a/04_Regional_Climate_Trends/Guides/3_Analyzing_Climate_Trends.Rnw
+++ b/04_Regional_Climate_Trends/Guides/3_Analyzing_Climate_Trends.Rnw
@@ -98,10 +98,9 @@ LoadData.fun(datapath)
 @ 
 
 Brute for method: 
-<<>>=
+<<eval=FALSE>>=
 if (file.exists(paste0(datapath, "anamolies.RData" ))) {
-    load(file=paste0(datapath, "anamolies.RData"))
-    return
+    load(file="/home/mwl04747/RTricks/04_Regional_Climate_Trends/Data/SP24/anamolies.RData")
     print("RData file found and loaded")
 } else {
     print("RData file does not exist.")
@@ -133,7 +132,7 @@ print(monthlyTrend.fun)
 \item[Example of how to use the function] Here's an example using the list of station dataframes anomalies. Note: I have spelled this wrong!
 
 <<echo=TRUE, results='hide'>>=
-USC00042294.trends <- monthlyTrend.fun(USC00042294.anomalies)
+USC00042294.trends <- monthlyTrend.fun(USC00042294.anamolies)
 @
 
 \item[Explore Results] Table~\ref{tab:TMAXtrends} summarizes the monthly trends for TMAX. Admittedly, determining the months with the biggest changes isn't a very good approach for hypothesize testing -- it's more like a fishing expedition, but as long as we understand the difference between an a priori hypothesis and an exploratory analysis, we should be okay if we make appropriate conclusions. 
@@ -169,19 +168,18 @@ I suggest you select the element/month with the strongest signal. I selected TMI
 <<>>=
 par(mar=c(5,5,3,4), las=1)
       
-plot(TMIN.a ~ Ymd, data=subset(USC00042294.anomalies$TMIN, 
+plot(TMIN.a ~ Ymd, data=subset(USC00042294.anamolies$TMIN, 
     MONTH==1), las=1, pch=20, cex=.5, col="grey", 
     ylab="Temp Anamoly (°C) ", 
     main="", 
-    #sub="For Station USC00042294, 1893-2012, slope = 0.001,  p-value < 0.001, r2 = 0.02", 
     xlab="Year", frame.plot=TRUE)
-mtext("Maximum Daily Temperature Trend for June", cex=1.3, side=3, line=1)
+mtext("Minimum Daily Temperature Trend for January", cex=1.3, side=3, line=1)
 
 subtitle <- "Trend Line: 2.0/100 yrs; p-value = 0.004, r2 = 0.006"
 mtext(subtitle, side=3, line=0, cex=1.0, col="red")
 
 USC00042294.lm = lm(TMIN.a ~ Ymd, 
-          data=subset(USC00042294.anomalies$TMIN, MONTH==1))
+          data=subset(USC00042294.anamolies$TMIN, MONTH==1))
 
 abline(coef(USC00042294.lm), col="red", lwd=1.5)
 @
