--- a/04_Regional_Climate_Trends/Guides/0_Project_Overview_and_Set_Up.Rnw
+++ b/04_Regional_Climate_Trends/Guides/0_Project_Overview_and_Set_Up.Rnw
@@ -59,7 +59,7 @@ Note, it maybe that there are too many missing values in one or more of your sta
 
 The station inventory is available as a .txt file. The file is a fixed width file, which means that each column has a specific width. The file is available at the following URL: \url{https://www.ncei.noaa.gov/pub/data/ghcn/daily/ghcnd-inventory.txt}.
 
-<<echo=TRUE>>=
+<<read_ghcnd_inventory, echo=TRUE>>=
 library(here)
 # Get Stations Data (Inventory)
 inventory = read.table("https://www.ncei.noaa.gov/pub/data/ghcn/daily/ghcnd-inventory.txt")
@@ -82,7 +82,7 @@ str(inventory)
 
 \subsection{Selecting Active Weather Stations with Maximum Daily Temperature Readings}
 
-<<echo=TRUE>>=
+<<subsetTMAX, echo=TRUE>>=
 # Subset data for TMAX  (Max Temperature) Element
 inventory.TMAX = subset(inventory, subset=ELEMENT=="TMAX")
 
@@ -111,7 +111,7 @@ The inventory has a list of stations and map coordinates (latitude and longitude
 
 It's a bit strange, but the dataset, GHCNd includes US states and Canadian Provinces, plus various territories of the US. 
 
-<<>>=
+<<read_ghcnd-stations>>=
 station_names = c("ID",             #  1-11   Character   11
                   "LATITUDE",       # 13-20   Real        8
                   "LONGITUDE",      # 22-30   Real        9
@@ -155,7 +155,7 @@ stations.USCan = subset(temp.TMAX, subset=(STATE!="  "))
 \subsection{Select Active Stations}
 
 How many stations are in the state? 'r nrow(stations.USCan)'!
-<<>>=
+<<select_active_stations>>=
 stations.active = subset(stations.USCan, subset=LASTYEAR>=2022)
 str(stations.active)
 nrow(stations.active)
@@ -165,7 +165,7 @@ nrow(stations.active)
 
 To accomplish this, I need to do a loop to select the first 5 stations for each state.
 
-<<>>=
+<<selected15oldests>>=
 # Loop to select 15 stations for each state
 #stations.active.oldest = subset(stations.active, subset=FIRSTYEAR==min(FIRSTYEAR))
 i=10
@@ -188,7 +188,7 @@ for(i in 1:nrow(States)) {
 
 \section{Plot Results}
 
-<<>>=
+<<mapstations>>=
 plot(stations.active.oldest$LONGITUDE, stations.active.oldest$LATITUDE, 
      pch=20, cex=.4, xlab="Long", ylab="Lat", las=1)
 @
@@ -196,7 +196,7 @@ plot(stations.active.oldest$LONGITUDE, stations.active.oldest$LATITUDE,
 \subsection{Next Steps}
 
 In Guide \#1, we'll use the stations.active.oldest dataset to download the daily temperature and precipitation data for the ``oldest, active stations".
-<<>>=
+<<write_stations.active.oldest>>=
 # export file to csv
 write.csv(stations.active.oldest, 
     here("04_Regional_Climate_Trends", 
@@ -204,6 +204,14 @@ write.csv(stations.active.oldest,
 @
 
 
+<<estimatingprojecttime, echo=FALSE, results='hide'>>=
+# Read csv
+import = read.csv(here("04_Regional_Climate_Trends", "Guides", "timestatimages.csv"))
+tasks <- aggregate(Time ~ Task, import, mean)
+tasks$Time = round(tasks$Time, 0)
+
+tasks$Task 
+@
 Here's a Table of Task for the Project:
 
 We use Table~\ref{tab:task} to estimate the time and resources needed to complete the project.
@@ -214,28 +222,30 @@ We use Table~\ref{tab:task} to estimate the time and resources needed to complet
 \label{tab:tasks}
 \begin{tabular}{|l|l|p{3cm}|l|}
 \hline
-\textbf{Task}       & \textbf{Time} & \textbf{Resources} & \textbf{Notes} \\ \hline \hline
-1. Select State    &     x (y) & Rstudio, R code and NOAA website & Guide 1 \\ \hline
-2. Download Station Data & x (y) & Rstudio, R code and NOAA website & Guide 1  \\ \hline
-3. Read Station Data into R & 5 (y) & Rstudio, R code & Guide 1 \\ \hline
-4. Fix Dates & x (y) & Rstudio, R code &  \\ Guide 2 \\ \hline
-5. Transform Data & x (y) & Rstudio, R code &  Guide 2 \\ \hline
-6. Subset for TMAX & x (y) & Rstudio, R code & Guide 3 \\ \hline
-7. Linear Model for TMAX & x (y) & Rstudio, R code & Guide 3 \\ \hline
-Evaluation of Model & x (y) & Rstudio, R code & Guide 3 \\ \hline
-Subset for TMIN & x (y) & Rstudio, R code & Guide 3 \\ \hline
-Linear Model for TMIN & x (y) & Rstudio, R code & Guide 3 \\ \hline
-Evaluation of Model & x (y) & Rstudio, R code & Guide 3 \\ \hline
-Subset for PRCP & ? (y) & Rstudio, R code & Guide 3 \\ \hline
-Linear Model for PRCP & ? (y) & Rstudio, R code & Guide 3 \\ \hline
-Evaluation of Model & ? (y) & Rstudio, R code & Guide 3\\ \hline
-Read EPA State Impact Report & ? (y) & EPA website & Canvas Link  \\ \hline
-Explore Other Analysis Options & ?0 (y) & Rstudio, R code & Guide 3 \\ \hline
-Create Presentation Ready Graphics & ?0 (y) & Rstudio, R code & Guide 4 \\ \hline
-Scripting for Video & ?0 (y) & Rstudio, R code & Guide 4 \\ \hline
-Make Video & ?0 (y) & Rstudio, R code & Guide 4 \\ \hline
-Upload Video & ? (y) & Rstudio, R code & Guide 4 \\ \hline\hline
-Total         & X (Y) & & \\ \hline
+\textbf{Task}             & \textbf{Time}             & \textbf{Resources} & \textbf{Notes} \\ \hline \hline
+1. Select State           & x (\Sexpr{tasks$Time[14]})           & Rstudio, R code and NOAA website & Guide 1 \\ \hline
+2. Download Station Data  & x (\Sexpr{tasks$Time[5]})                      & Rstudio, R code and NOAA website & Guide 1  \\ \hline
+3. Read Station Data into R & 5 (\Sexpr{tasks$Time[12]})         & Rstudio, R code & Guide 1 \\ \hline
+4. Fix Dates              & x (\Sexpr{tasks$Time[7]}) & Rstudio, R code      &  \\ Guide 2 \\ \hline
+5. Transform Data         & x (\Sexpr{tasks$Time[18]}) & Rstudio, R code &  Guide 2 \\ \hline
+Check Coverage            & x (\Sexpr{tasks$Time[2]}) & Rstudio, R code & Guide 2 \\ \hline
+6. Subset for TMAX        & x (\Sexpr{tasks$Time[16]}) & Rstudio, R code& Guide 3 \\ \hline
+7. Linear Model for TMAX  & x (\Sexpr{tasks$Time[10]}) & Rstudio, R code & Guide 3 \\ \hline
+Evaluation of Model       & x (??) & Rstudio, R code & Guide 3 \\ \hline
+Subset for TMIN           & x (\Sexpr{tasks$Time[17]}) & Rstudio, R code & Guide 3 \\ \hline
+Linear Model for TMIN     & x (\Sexpr{tasks$Time[8]}) & Rstudio, R code & Guide 3 \\ \hline
+Evaluation of Model       & x (??) & Rstudio, R code & Guide 3 \\ \hline
+Subset for PRCP           & ? (\Sexpr{tasks$Time[15]}) & Rstudio, R code & Guide 3 \\ \hline
+Linear Model for PRCP     & ? (\Sexpr{tasks$Time[9]}) & Rstudio, R code & Guide 3 \\ \hline
+Evaluation of Model       & ? (??) & Rstudio, R code & Guide 3\\ \hline
+Read EPA State Impact Report & ? (\Sexpr{tasks$Time[6]}) & EPA State CC Status & Canvas Link  \\ \hline
+Explore Analysis Options & ?0 (\Sexpr{tasks$Time[1]}) & Rstudio, R code & Guide 3 \\ \hline
+Decide on Graphics        & ?0 (\Sexpr{tasks$Time[4]}) & Rstudio, R code & Guide 4 \\ \hline
+Presentation Ready Graphics & ?0 (\Sexpr{tasks$Time[3]}) & Rstudio, R code & Guide 4 \\ \hline
+Scripting for Video       & ?0 (\Sexpr{tasks$Time[13]}) & Rstudio, R code & Guide 4 \\ \hline
+Make Video                & ?0 (\Sexpr{tasks$Time[11]}) & Rstudio, R code & Guide 4 \\ \hline
+Upload Video              & ? (??) & Rstudio, R code & Guide 4 \\ \hline\hline
+Total (hrs)               & X (\Sexpr{round(sum(tasks$Time)/60,1)}) & & \\ \hline
 \end{tabular}
 \end{table}
 
