--- a/04_Regional_Climate_Trends/Guides/3_Analyzing_Climate_Trends.Rnw
+++ b/04_Regional_Climate_Trends/Guides/3_Analyzing_Climate_Trends.Rnw
@@ -14,9 +14,9 @@
 \colorlet{LightRubineRed}{RubineRed!100}
 \definecolor{mypink2}{RGB}{219, 48, 122}
 
-\title{Analyzing Climate Trends}
+\title{Guide 3: Analyzing Climate Trends}
 \author{Marc Los Huertos}
-\date{\today~(ver. 0.44)} 
+\date{\today~(ver. 0.48)} 
 
 \begin{document}
 \maketitle
@@ -74,36 +74,17 @@ As we get further into the project, these code chunks may require tweaking becau
 
 \subsection{Before Starting the Process}
 
-Before you begin, make sure you have the stations to read into R. Look at the R environment to see that the stations have been loaded in to R. If not, please Slack Marc and mentors, so we help you get these files into the R environment, which might mean running the previous guide again. 
+Before you begin, make sure you have the stations to read into R. Look at the R environment to see that the stations have been loaded in to R. 
+
+\begin{verbatim}
+ls()
+\end{verbatim}
+
+If not, please Slack Marc and mentors, so we help you get these files into the R environment, which might mean running the previous guide again. 
 
 \subsubsection{Reading csv and loading R.data}
 
-\begin{description}
-
-\item[Read and Load Data] This function will read the csv files and load the data into R. The function will also return a list of dataframes. If you clean up the environment, you might need to read.csv data into the R environment again. Again, check the environment to see if the objects are there.
-  
-<<read_and_load_data.fun, echo=FALSE>>=
-print(read_and_load_data.fun)
-@
-
-
-\item{Loading Saved RData files}
-
-If you have saved the RData files, you can load them into the R environment using the following code:
-
-DOESN'T WORK YET!
-
-<<>>=
-LoadData.fun(datapath)
-@ 
-
-
-<<>>=
-ls()
-@
-
-                         
-\end{description}
+If you decide to use the knitting function in R, it turns out that the R environment that the console has is not availabe for the knitting function. So, I had to create a way to bring the data into the knitted environment. If you would like to do this, see Section~\ref{subsec:load_data}.
 
 \section{Analyzing Monthly Trends}
 
@@ -115,11 +96,12 @@ In this section, we'll discuss how we might analyze the trends in the data by mo
 
 \item[Analyze Stations for Trends by Month] This function will take the list of dataframes and return a list of linear models for each month. The function will also return a summary of the linear models.
 
-<<show_monthlyTrend.fun, echo=FALSE>>=
-print(monthlyTrend.fun)
-@
 
-\item[Example of how to use the function] Here's an example using the list of station dataframes anomalies. Note: I have spelled this wrong!
+\begin{center}
+\textbf{Function: \textcolor{Plum}{Function: monthlyTrend.fun()}}
+\end{center}
+
+\item[Example of how to use the function] Here's an example using the list of station dataframes anomalies. Note: I have often spelled the word anamoly wrong!
 
 <<echo=TRUE, results='hide'>>=
 USC00042294.trends <- monthlyTrend.fun(USC00042294.anamolies)
@@ -127,7 +109,7 @@ USC00042294.trends <- monthlyTrend.fun(USC00042294.anamolies)
 
 \item[Explore Results] Table~\ref{tab:TMAXtrends} summarizes the monthly trends for TMAX. Admittedly, determining the months with the biggest changes isn't a very good approach for hypothesize testing -- it's more like a fishing expedition, but as long as we understand the difference between an a priori hypothesis and an exploratory analysis, we should be okay if we make appropriate conclusions. 
 
-We would want to evaluate the trends for TMIN and PRCP too!
+We would want to evaluate the trends for TMIN and PRCP too! You can use the Environment tab in Rstudio to see the trend results for all three variables withut needing any code. 
 
 \end{description}
 
@@ -140,15 +122,6 @@ xtable(USC00042294.trends[USC00042294.trends$ELEMENT=="TMAX",], caption = "TMAX 
 #, type="latex", comment=FALSE, caption="TMAX Trends by Month", label = "tab:TMAXtrends")
 @
 
-\subsubsection{Deprecated Loop Code}
-
-In case your data downloaded as Montly data, here's the code I created two years ago before the rNOAA library started failing and I had to spend all week redoing the code!
-
-Station data frames were called GSOM (Monthly data). See if you can interpret each of the steps. Evaluate both TMAX and TMIN in GSOM by Year using MonthEvalStats() function. 
-
-<<AlternativeLoopFunction, eval=TRUE, echo=FALSE>>=
-print(MonthEvalStats.fun)
-@
 
 \subsection{Plotting a Simple Trend Line}
 
@@ -163,18 +136,24 @@ plot(TMIN.a ~ Ymd, data=subset(USC00042294.anamolies$TMIN,
     ylab="Temp Anamoly (°C) ", 
     main="", 
     xlab="Year", frame.plot=TRUE)
-mtext("Minimum Daily Temperature Trend for January", cex=1.3, side=3, line=1)
 
-subtitle <- "Trend Line: 2.0/100 yrs; p-value = 0.004, r2 = 0.006"
-mtext(subtitle, side=3, line=0, cex=1.0, col="red")
-
+  mtext("Minimum Daily Temperature Trend for January", 
+        cex=1.3, side=3, line=1)
+  subtitle <- c("Trend Line: 2.0/100 yrs; 
+                p-value = 0.004, r2 = 0.006")
+  mtext(subtitle, side=3, line=0, cex=1.0, col="red")
+  
 USC00042294.lm = lm(TMIN.a ~ Ymd, 
-          data=subset(USC00042294.anamolies$TMIN, MONTH==1))
+    data=subset(USC00042294.anamolies$TMIN, MONTH==1))
 
 abline(coef(USC00042294.lm), col="red", lwd=1.5)
 @
 
- 
+I have created a basic function template, but we'll develop this together when we have a chance.. 
+
+\begin{center}
+\textbf{Function: \textcolor{Plum}{Function: plotTrend.fun()}}
+\end{center}
 
 
   
@@ -1527,6 +1506,59 @@ TBD
 \section{Ice-Core Data}
 
 TBD
+
+\section{Marc's Custom Functions}
+
+\subsection{monthlyTrend.fun}
+
+<<show_monthlyTrend.fun, echo=FALSE>>=
+print(monthlyTrend.fun)
+@
+
+\subsubsection{Deprecated Loop Code}
+
+In case your data downloaded as Montly data, here's the code I created two years ago before the rNOAA library started failing and I had to spend all week redoing the code!
+
+Station data frames were called GSOM (Monthly data). See if you can interpret each of the steps. Evaluate both TMAX and TMIN in GSOM by Year using MonthEvalStats() function. 
+
+<<AlternativeLoopFunction, eval=TRUE, echo=FALSE>>=
+print(MonthEvalStats.fun)
+@
+
+
+
+
+
+\section{Troubleshooting}
+
+\subsection{Loading and Reading Data into the Knit Environment}\label{subsec:load_data}
+\begin{description}
+
+\item[Read and Load Data] This function will read the csv files and load the data into R. The function will also return a list of dataframes. If you clean up the environment, you might need to read.csv data into the R environment again. Again, check the environment to see if the objects are there.
+  
+<<read_and_load_data.fun, echo=FALSE>>=
+print(read_and_load_data.fun)
+@
+
+
+\item{Loading Saved RData files}
+
+If you have saved the RData files, you can load them into the R environment using the following code:
+
+DOESN'T WORK YET!
+
+<<>>=
+LoadData.fun(datapath)
+@ 
+
+
+<<>>=
+ls()
+@
+
+                         
+\end{description}
+
 
 \section{Conclusions}
 
