--- a/04_Regional_Climate_Trends/Guides/3_Analyzing_Climate_Trends.Rnw
+++ b/04_Regional_Climate_Trends/Guides/3_Analyzing_Climate_Trends.Rnw
@@ -104,7 +104,7 @@ In this section, we'll discuss how we might analyze the trends in the data by mo
 \item[Example of how to use the function] Here's an example using the list of station dataframes anomalies. Note: I have often spelled the word anamoly wrong!
 
 <<echo=TRUE, results='hide'>>=
-USC00042294.trends <- monthlyTrend.fun(USC00042294.anamolies)
+USC00042294.trends <- monthlyTrend.fun(USC00042294.anomalies)
 @
 
 \item[Explore Results] Table~\ref{tab:TMAXtrends} summarizes the monthly trends for TMAX. Admittedly, determining the months with the biggest changes isn't a very good approach for hypothesize testing -- it's more like a fishing expedition, but as long as we understand the difference between an a priori hypothesis and an exploratory analysis, we should be okay if we make appropriate conclusions. 
@@ -129,9 +129,9 @@ Here's an example of how to plot a simple trend line for TMIN for January. We ar
 
 I suggest you select the element/month with the strongest signal. I selected TMIN and January because it had a strong signal ), i.e. highly significant with a p-value << 0.05.  
 <<>>=
-par(mar=c(5,5,3,4), las=1)
+par(mar=c(5,5,3,4), las=1, mfrow=c(1,1))
       
-plot(TMIN.a ~ Ymd, data=subset(USC00042294.anamolies$TMIN, 
+plot(TMIN.a ~ Ymd, data=subset(USC00042294.anomalies$TMIN, 
     MONTH==1), las=1, pch=20, cex=.5, col="grey", 
     ylab="Temp Anamoly (°C) ", 
     main="", 
@@ -139,21 +139,33 @@ plot(TMIN.a ~ Ymd, data=subset(USC00042294.anamolies$TMIN,
 
   mtext("Minimum Daily Temperature Trend for January", 
         cex=1.3, side=3, line=1)
-  subtitle <- c("Trend Line: 2.0/100 yrs; 
-                p-value = 0.004, r2 = 0.006")
+  subtitle <- c("Trend Line: 2.0/100 yrs; p-value = 0.004, r2 = 0.006")
   mtext(subtitle, side=3, line=0, cex=1.0, col="red")
   
-USC00042294.lm = lm(TMIN.a ~ Ymd, 
-    data=subset(USC00042294.anamolies$TMIN, MONTH==1))
+USC00042294.lm = lm(TMIN.a ~ Ymd, data=subset(USC00042294.anomalies$TMIN, 
+    MONTH==1))
 
 abline(coef(USC00042294.lm), col="red", lwd=1.5)
 @
 
-I have created a basic function template, but we'll develop this together when we have a chance.. 
+\begin{description}
+
+\item[Plot Trends by Month] I have created a basic function template, but we'll develop this together when we have a chance. This function will take the list of creates a plot based on the following inputs: list of station dataframes, the element, and the month.
 
 \begin{center}
 \textbf{Function: \textcolor{Plum}{Function: plotTrend.fun()}}
 \end{center}
+
+\item[Example of how to use the function] Here's an example using the list of station dataframes anomalies. Note: I have often spelled the word anomaly wrong!
+
+<<echo=TRUE, results='hide'>>=
+plotTrend.fun(USC00042294.anomalies, "TMIN", 7)
+@
+
+\item[Explore Results] I suggest you look carefully at the plots for hidden trends. In this case, look how the temperature really starts warming after teh 1960s. I don't know that that means, but seems important!
+
+\end{description}
+
 
 
   
@@ -294,10 +306,10 @@ text(min(Drought.run$Year, na.rm=T), max(Drought.run$lengths, na.rm=T),
 
 In this example, we could either use rnorm or a kernel density estimate, for each 10 years or 20 years segmments and see if there is a difference over time. In general, these can be pretty compelling. But it's the mean that is really driving the analysis, so that might be something to look at by decade to see if there is a trend. 
 
-<<eval=TRUE, echo=FALSE>>=
+<<eval=TRUE, echo=FALSE, results='hide'>>=
 #library(lubridate)
 #load("USC00042294b.RData")
-station = subset(USC00040693.anamolies$PRCP)
+station = subset(USC00040693.anomalies$PRCP)
 
 #floor_decade  = function(value){ return(value - value %% 10) } 
 floor_decade  = function(value){ return(as.integer(value/10)*10) } 
